# orgnotion

./: .cargo-crap.toml  .env.example  .gitignore  Cargo.toml  README.md
.github/workflows/: ci.yml
scripts/: pre-commit
src/: cli.rs  converter.rs  lib.rs  main.rs  notion.rs  org_parser.rs  ports.rs  run.rs  transformers.rs  validate.rs  vault.rs
src/adapters/: clock.rs  env.rs  fs.rs  mod.rs  notion_client.rs  reporter.rs
tests/: adapters_tests.rs  converter_tests.rs  markup_evidence_tests.rs  notion_client_tests.rs  org_parser_tests.rs  run_tests.rs  transformers_tests.rs  validate_tests.rs  vault_tests.rs
tests/common/: mod.rs
